# NN_meta

./: .gitignore  CMakeLists.txt  CXX_CHEATSHEET.md  CXX_CHEATSHEET_EN.md  README.md  README_EN.md  benchmark_comparison_report.md  benchmark_comparison_report_EN.md  run_benchmarks.sh
benchmarks/: benchmark_pytorch.py  compare_benchmarks.py
include/: benchmark.hpp  expression_template.hpp  nn_compiler.hpp  tensor.hpp
src/: benchmark_cpp.cpp  main.cpp
